Upgrade ASM and adapt tests to support Java 17 LTS.