@@ -154,6 +154,9 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.22.1</version>
+					<configuration>
+						<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>com.github.eirslett</groupId>
@@ -202,7 +205,7 @@
 						<configuration>
 							<rules>
 								<requireJavaVersion>
-									<version>15</version>
+									<version>17</version>
 								</requireJavaVersion>
 							</rules>
 						</configuration>
@@ -237,7 +240,7 @@
 						<configuration>
 							<quiet>true</quiet>
 							<additionalJOption>-Xdoclint:none</additionalJOption>
-							<additionalOptions>--enable-preview --release 15</additionalOptions>
+							<additionalOptions>--enable-preview --release 17</additionalOptions>
 						</configuration>
 						<executions>
 							<execution>
